Fix missing imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ exportClasses(BigRNAConnection)
 exportMethods(datafile)
 exportMethods(getCache)
 exportMethods(gqlQuery)
+importFrom(BiocFileCache,BiocFileCache)
 importFrom(dplyr,filter)
 importFrom(httr,POST)
 importFrom(httr,modify_url)
 importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
+importFrom(rappdirs,user_cache_dir)
