--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,17 @@
-Package: BigRNA
+Package: BigRNAr
 Type: Package
 Title: Access the BigRNA compendium (500000+ RNA-seq samples)
-Version: 0.1.1
+Version: 0.1.2
+Date: 2019-04-24
 Authors@R: c(person('Sean', 'Davis', email='seandavi@gmail.com', role=c('aut','cre')))
 Maintainer: Sean Davis <seandavi@gmail.com>
 Description: Access the BigRNA compendium (500000+ RNA-seq samples)
+Imports: BiocFileCache,
+    dplyr,
+    httr,
+    jsonlite,
+    rappdirs,
+    magrittr
 License: MIT
 Encoding: UTF-8
 LazyData: true
