A few more errors cleaned up

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ exportMethods(datafile)
 exportMethods(getCache)
 exportMethods(gqlQuery)
 importFrom(BiocFileCache,BiocFileCache)
+importFrom(BiocFileCache,bfcinfo)
+importFrom(BiocFileCache,bfcrpath)
 importFrom(dplyr,filter)
 importFrom(httr,POST)
 importFrom(httr,modify_url)
