--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: BigRNAr
 Type: Package
-Title: Access the BigRNA compendium (500000+ RNA-seq samples)
-Version: 0.1.3
+Title: Access the BigRNA Compendium
+Version: 0.1.4
 Date: 2019-04-24
 Authors@R: c(person('Sean', 'Davis', email='seandavi@gmail.com', role=c('aut','cre')))
 Maintainer: Sean Davis <seandavi@gmail.com>
 Description: Access the BigRNA compendium (500000+ RNA-seq samples)
+URL: https://github.com/seandavi/BigRNAr
+BugReports: https://github.com/seandavi/BigRNAr/issues/new
 Imports: BiocFileCache,
     dplyr,
     httr,
